Fixed font sizing on mobile

--- a/src/components/Featured/Featured.scss
+++ b/src/components/Featured/Featured.scss
@@ -57,7 +57,7 @@
           h4 {
             color: App.$White;
             font-family: App.$Montserrat;
-            font-size: 6vmin;
+            font-size: 5vmin;
             padding: 0 0 .1vmin 0vmin;
         
             @media (min-width: 1024px) {
