--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -16,7 +16,7 @@
     h5 {
         color: App.$White;
         font-family: App.$Montserrat;
-        font-size: 6vmin;
+        font-size: 5vmin;
 
         @media (min-width: 1024px) {
           font-size: 5vmin;
